trying to correct contrast color errors

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
   background-color: #959595;
   margin: 0;
   padding: 0;
-  color: #404040; /* this colour text is better for readers*/
+  color: black; /* this colour text is better for readers*/
   font-weight: normal;
   font-size: 1.2rem;
   line-height: 1.5;
